Add configurable options for watched events

--- a/filewatcher.example.yaml
+++ b/filewatcher.example.yaml
@@ -6,3 +6,5 @@ pubsub:
 filewatcher:
   source-dir: source
   handler: pubsub # supported handler: log, pubsub
+  refresh-interval: 5
+  events: ["create", "write", "rename"]
